[package]
name = "all-note"
version = "0.1.0"
authors = ["Kim-DaeHan <kjs50458281@gmail.com>"]
description = "all note app"
repository = "https://github.com/Kim-DaeHan/actix-rest-template"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.1"
actix-cors = "0.7.0"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.1.4", features = ["postgres", "chrono", "uuid", "r2d2"] }
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.108"
chrono = { version = "0.4.31", features = ["serde"]}
uuid = { version = "1.6.1", features = ["serde", "v4"] }
r2d2 = "0.8.0"
derive_more = "0.99.17"
env_logger = "0.11.1"
log = "0.4.20"
futures-util = "0.3.30"
futures-macro = "0.3.30"

[[bin]]
name = "all-note"
path = "src/main.rs"
